--- a/MyWebAPI/Views/Login/Index.cshtml
+++ b/MyWebAPI/Views/Login/Index.cshtml
@@ -2,6 +2,29 @@
 @{
     ViewBag.Title = "登陆";
 }
-
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <h2>登陆</h2>
-
+@{
+    List<SysUser> list = ViewBag.list;
+}
+<table>
+    @{foreach (var user in list)
+            {
+            <tr><td>@user.name</td><td>@user.pwd</td><td>@user.createTime</td></tr>
+        }
+    }
+</table>
+<script>
+    $.ajax({
+        url: "/api/Product",
+        success: function (res) {
+            console.log(res);//Array
+        }
+    })
+    $.ajax({
+        url: "/api/Product/1",
+        success: function (res) {
+            console.log(res);//object
+        }
+    })
+</script>
