--- a/MyWebAPI/Views/Login/Index.cshtml
+++ b/MyWebAPI/Views/Login/Index.cshtml
@@ -1,30 +1,28 @@
-﻿
-@{
-    ViewBag.Title = "登陆";
+﻿@{
+    Layout = null;
 }
-<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-<h2>登陆</h2>
-@{
-    List<SysUser> list = ViewBag.list;
-}
-<table>
-    @{foreach (var user in list)
-            {
-            <tr><td>@user.name</td><td>@user.pwd</td><td>@user.createTime</td></tr>
-        }
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>登陆 - MyWeb</title>
+    <meta name="description" content="mall" />
+    <link href="~/Content/css/reset.css" rel="stylesheet" />
+    <style>
+        #main {position: absolute;width:400px;height:200px;left:50%;top:50%; 
+margin-left:-200px;margin-top:-100px;background-color: #20b4af}
+    </style>
+</head>
+<body style="background-color:#808080">
+    @using (Html.BeginForm("Index", "Login", FormMethod.Post))
+    {
+        <div id="main">
+            <label for="username">用户：</label><input type="text" name="username" value="" id="username" placeholder="请输入用户名" /><br>
+            <label for="password">密码：</label><input type="password" name="password" value="" id="password" placeholder="请输入密码" /><br>
+            <label for="validate">验证码：</label><input type="text" name="validate" value="" id="validate" /><img src="@Url.Content("~/Login/Validator")" onclick="this.src='@Url.Content("~/Login/Validator/id=")'+(new Date()).getTime()" title="看不清，换一张" />
+            <input type="submit" name="" id="" value="登 录" />
+        </div>
     }
-</table>
-<script>
-    $.ajax({
-        url: "/api/Product",
-        success: function (res) {
-            console.log(res);//Array
-        }
-    })
-    $.ajax({
-        url: "/api/Product/1",
-        success: function (res) {
-            console.log(res);//object
-        }
-    })
-</script>
+</body>
+</html>
